--- a/tp1.html
+++ b/tp1.html
@@ -12,3 +12,8 @@
         <h3>Estudiante de programacion</h3>
         <img src="assets/foto.jpg" width=140px height="140px">
     </div> 
+    <div id="descrip">
+        <h2>Acerca de mí</h2>
+        <p>Actualmente estoy estudiando una tecnicatura en programación, 
+            al mismo tiempo que me preparo de manera autodidacta en cursos online. Entusiasta y siempre dispuesto a afrontar nuevos retos.</p>
+            
