creacion de seccion con 2 divs y utlizando listas

--- a/tp1.html
+++ b/tp1.html
@@ -16,4 +16,21 @@
         <h2>Acerca de mí</h2>
         <p>Actualmente estoy estudiando una tecnicatura en programación, 
             al mismo tiempo que me preparo de manera autodidacta en cursos online. Entusiasta y siempre dispuesto a afrontar nuevos retos.</p>
-            
+<section id="section-top">
+    <div id="education">
+        <h2>Educación</h2>
+        <ul>
+            <li><b>UTN - FRLR</b><br>Tecnicatura Universitaria en Programación<br> Marzo 2023 - Actualidad</li>
+            <li><b>Círculo de Periodistas Deportivos (CABA)</b><br>Periodismo deportivo<br>Marzo 2020 - Diciembre 2021</li>
+            <li><b>Colegio Pre-Universitario General San Martín (secundaria)</b><br>Técnico en administración y gestión de las organizaciones<br>Diciembre 2019</li>
+        </ul>
+    </div>
+    <div id="work-experience">
+        <h2>Experiencia laboral</h2>
+        <ul>
+            <li><b>Estadistico deportivo</b><br>Genius Sports<br>2024 - Actualidad</li>
+            <li><b>Personal Administrativo (pasantía)</b><br>Ministerio de Educación de La Rioja<br>Abril - Noviembre 2019</li>
+            <li><b>Personal Administrativo (pasantía)</b><br>Universidad Nacional de La Rioja<br>Abril - Noviembre 2018</li>
+        </ul>
+    </div>
+</section>       
