--- a/tp1.html
+++ b/tp1.html
@@ -33,4 +33,26 @@
             <li><b>Personal Administrativo (pasantía)</b><br>Universidad Nacional de La Rioja<br>Abril - Noviembre 2018</li>
         </ul>
     </div>
-</section>       
+</section>
+    <div id="skills">
+        <h2>Aptitudes</h2>
+        <ol>
+            <li>Organización</li>
+            <li>Asertividad</li>
+            <li>Trabajo en equipo</li>
+            <li>Motivación</li>
+        </ol>
+    </div>
+    <div id="languages">
+        <h2>Idiomas</h2>   
+        <ul>
+            <li>Ingles intermedio</li>
+        </ul>
+    </div>
+    <div id="other-skills">
+        <h2>Certificaciones</h2>
+        <ul>
+            <li>Primer año de inglés. Instituto English Empire</li>
+            <li>Curso SQL</li>
+        </ul>
+    </div>       
