añadi etiquetas de cierre de body y html

--- a/tp1.html
+++ b/tp1.html
@@ -33,7 +33,7 @@
             <li><b>Personal Administrativo (pasantía)</b><br>Universidad Nacional de La Rioja<br>Abril - Noviembre 2018</li>
         </ul>
     </div>
-</section>
+</section>    
     <div id="skills">
         <h2>Aptitudes</h2>
         <ol>
@@ -48,11 +48,13 @@
         <ul>
             <li>Ingles intermedio</li>
         </ul>
-    </div>
+    </div> 
     <div id="other-skills">
         <h2>Certificaciones</h2>
         <ul>
             <li>Primer año de inglés. Instituto English Empire</li>
             <li>Curso SQL</li>
         </ul>
-    </div>       
+    </div>
+</body>
+</html>
