inclusion de los divs en nueva seccion y link en certificaciones

--- a/tp1.html
+++ b/tp1.html
@@ -33,7 +33,8 @@
             <li><b>Personal Administrativo (pasantía)</b><br>Universidad Nacional de La Rioja<br>Abril - Noviembre 2018</li>
         </ul>
     </div>
-</section>    
+</section>
+<section id="section-bottom">    
     <div id="skills">
         <h2>Aptitudes</h2>
         <ol>
@@ -53,8 +54,9 @@
         <h2>Certificaciones</h2>
         <ul>
             <li>Primer año de inglés. Instituto English Empire</li>
-            <li>Curso SQL</li>
+            <li>Curso SQL <a href="https://www.w3schools.com/sql/sql_intro.asp">(W3Schools)</a></li>
         </ul>
     </div>
+</section>    
 </body>
 </html>
