div de contacto con links

--- a/tp1.html
+++ b/tp1.html
@@ -57,6 +57,12 @@
             <li>Curso SQL <a href="https://www.w3schools.com/sql/sql_intro.asp">(W3Schools)</a></li>
         </ul>
     </div>
-</section>    
+</section>
+<div id="contacto">
+    <h2>Contacto</h2>
+    <p> Wpp: +5493804686854 | Gmail: pablofermincordoba@gmail.com |  
+    Ig: <a href="https://www.instagram.com/pablo.cordoba07?igsh=NHVsejk3ZnNlaTd5">pablo.cordoba07</a> |
+    <a href="https://www.linkedin.com/in/pablo-córdoba-8731a12aa/">Linkedin</a></p>
+</div>    
 </body>
 </html>
