--- a/tp1.html
+++ b/tp1.html
@@ -60,8 +60,8 @@
 </section>
 <div id="contacto">
     <h2>Contacto</h2>
-    <p> Wpp: +5493804686854 | Gmail: pablofermincordoba@gmail.com |  
-    Ig: <a href="https://www.instagram.com/pablo.cordoba07?igsh=NHVsejk3ZnNlaTd5">pablo.cordoba07</a> |
+    <p><span style="color: green;">Wpp:</span> +5493804686854 | <span style="color: darkred;">Gmail:</span> pablofermincordoba@gmail.com |  
+    <span style="color: fuchsia;">Ig:</span><a href="https://www.instagram.com/pablo.cordoba07?igsh=NHVsejk3ZnNlaTd5">pablo.cordoba07</a> |
     <a href="https://www.linkedin.com/in/pablo-córdoba-8731a12aa/">Linkedin</a></p>
 </div>    
 </body>
