error solucionado de etiqueta div sin cerrar en descrip

--- a/tp1.html
+++ b/tp1.html
@@ -16,6 +16,7 @@
         <h2>Acerca de mí</h2>
         <p>Actualmente estoy estudiando una tecnicatura en programación, 
             al mismo tiempo que me preparo de manera autodidacta en cursos online. Entusiasta y siempre dispuesto a afrontar nuevos retos.</p>
+    </div>
 <section id="section-top">
     <div id="education">
         <h2>Educación</h2>
