cambio de color en el span de contacto y en el estilo de los links. Nuevo estilo para el header y section top

--- a/tp1.html
+++ b/tp1.html
@@ -29,7 +29,7 @@
     <div id="work-experience">
         <h2>Experiencia laboral</h2>
         <ul>
-            <li><b>Estadistico deportivo</b><br>Genius Sports<br>2024 - Actualidad</li>
+            <li><b>Estadistico deportivo</b><br>Genius Sports<br>Marzo 2024 - Actualidad</li>
             <li><b>Personal Administrativo (pasantía)</b><br>Ministerio de Educación de La Rioja<br>Abril - Noviembre 2019</li>
             <li><b>Personal Administrativo (pasantía)</b><br>Universidad Nacional de La Rioja<br>Abril - Noviembre 2018</li>
         </ul>
@@ -62,7 +62,7 @@
 <div id="contacto">
     <h2>Contacto</h2>
     <p><span style="color: green;">Wpp:</span> +5493804686854 | <span style="color: darkred;">Gmail:</span> pablofermincordoba@gmail.com |  
-    <span style="color: fuchsia;">Ig:</span><a href="https://www.instagram.com/pablo.cordoba07?igsh=NHVsejk3ZnNlaTd5">pablo.cordoba07</a> |
+    <span style="color: rgb(96, 16, 186);">Ig:</span><a href="https://www.instagram.com/pablo.cordoba07?igsh=NHVsejk3ZnNlaTd5">pablo.cordoba07</a> |
     <a href="https://www.linkedin.com/in/pablo-córdoba-8731a12aa/">Linkedin</a></p>
 </div>    
 </body>
