posicionamiento de la imagen, uso de margin, paddin y border en diferentes divs

--- a/tp1.html
+++ b/tp1.html
@@ -10,7 +10,7 @@
     <div id="header">
         <h1>Pablo Cordoba</h1>
         <h3>Estudiante de programacion</h3>
-        <img src="assets/foto.jpg" width=140px height="140px">
+        <img src="assets/foto.jpg" width=140px height="140px" style="position: absolute; left: 90px; bottom: 120px;">
     </div> 
     <div id="descrip">
         <h2>Acerca de mí</h2>
