recorte en la foto del header, mejoras visuales en css y cambio de color de divs

--- a/tp1.html
+++ b/tp1.html
@@ -9,8 +9,8 @@
 <body>
     <div id="header">
         <h1>Pablo Cordoba</h1>
-        <h3>Estudiante de programacion</h3>
-        <img src="assets/foto.jpg" width=140px height="140px" style="position: absolute; left: 90px; bottom: 120px;">
+        <h3>Estudiante de programación</h3>
+        <img src="assets/foto (2).jpg" width=130px height=130px style="position: absolute; left: 90px; bottom: 50px;">
     </div> 
     <div id="descrip">
         <h2>Acerca de mí</h2>
@@ -61,8 +61,9 @@
 </section>
 <div id="contacto">
     <h2>Contacto</h2>
-    <p><span style="color: green;">Wpp:</span> +5493804686854 | <span style="color: darkred;">Gmail:</span> pablofermincordoba@gmail.com |  
-    <span style="color: rgb(96, 16, 186);">Ig:</span><a href="https://www.instagram.com/pablo.cordoba07?igsh=NHVsejk3ZnNlaTd5">pablo.cordoba07</a> |
+    <p><span style="color: green; padding-left: 5px;">Whatsapp:</span>+5493804686854  | 
+        <span style="color: darkred;">Gmail:</span> pablofermincordoba@gmail.com  |  
+    <span style="color: rgb(96, 16, 186); margin-right: 20px;">Instagram:</span><a href="https://www.instagram.com/pablo.cordoba07?igsh=NHVsejk3ZnNlaTd5">pablo.cordoba07</a> |
     <a href="https://www.linkedin.com/in/pablo-córdoba-8731a12aa/">Linkedin</a></p>
 </div>    
 </body>
