--- a/tp1.html
+++ b/tp1.html
@@ -14,8 +14,8 @@
     </div> 
     <div id="descrip">
         <h2>Acerca de mí</h2>
-        <p>Actualmente estoy estudiando una tecnicatura en programación, 
-            al mismo tiempo que me preparo de manera autodidacta en cursos online. Entusiasta y siempre dispuesto a afrontar nuevos retos.</p>
+        <p>Actualmente estoy estudiando una tecnicatura en programación en la Universidad Tecnológica Nacional, 
+            al mismo tiempo que me preparo de manera autodidacta en diversos cursos online. Entusiasta y siempre dispuesto a afrontar nuevos retos.</p>
     </div>
 <section id="section-top">
     <div id="education">
@@ -61,7 +61,7 @@
 </section>
 <div id="contacto">
     <h2>Contacto</h2>
-    <p><span style="color: green; padding-left: 5px;">Whatsapp:</span>+5493804686854  | 
+    <p><span style="color: green; padding-left: 5px; margin-right: 20px;">Whatsapp:</span>+5493804686854  | 
         <span style="color: darkred;">Gmail:</span> pablofermincordoba@gmail.com  |  
     <span style="color: rgb(96, 16, 186); margin-right: 20px;">Instagram:</span><a href="https://www.instagram.com/pablo.cordoba07?igsh=NHVsejk3ZnNlaTd5">pablo.cordoba07</a> |
     <a href="https://www.linkedin.com/in/pablo-córdoba-8731a12aa/">Linkedin</a></p>
